# template-poly

./: .README.md.un~  .gitattributes  .gitignore  README.md  README.md~  expander.py  poly.cpp  poly.md  test.py
docs/: poly.md  poly000.md  tree.md
docs/dit-dif-refs/: 再探 FFT - DIT 与 DIF，另种推导和优化 – Charles Wu的博客.html
poly/: BM.hpp  all  arithmetic.hpp  base.hpp  divide.hpp  divide_at.hpp  getdevint.hpp  getexp.hpp  getinv.hpp  getln.hpp  getsqrt.hpp  header.h  internal_math.hpp  lagrange.hpp  linear_rec.hpp  makefile  modint.hpp  multiple.hpp  ntt.hpp  ntt0.hpp  ntt1.hpp  plusminus.hpp  poly000.cpp  qpow.hpp
src/: :w  all  arithmetic.hpp  base.hpp  divide.hpp  getexp.hpp  getinv.hpp  getln.hpp  getsqrt.hpp  internal_math.hpp  modint.hpp  multiple.hpp  ntt.hpp  ntt1.hpp  plusminus.hpp
test/: div.cpp  exp.cpp  expander.py  ln.cpp  loj150.cpp  loj150_1.ans  main.cpp  qpow.cpp  sqrt.cpp  test.py
test/LOJ150/: main-combined.cpp  main.cpp  selfeval.sh
test/LOJ150/data/: polynomial_challenge_qres1.out  polynomial_challenge_qres10.in  polynomial_challenge_qres15.out  polynomial_challenge_qres19.in  polynomial_challenge_qres3.in  (+2 more)
test/benchmark/: CMakeLists.txt  benchmark  modint_raw.cpp
test/example/: CMakeLists.txt  LOJ150.cpp  all.cpp  arithmetic  arithmetic.cpp  combined.cpp  divide  divide.cpp  getInv  getInv.cpp  getexp.cpp  getinv.cpp  getln.cpp  linear_rec.cpp  makefile  modint_usage  modint_usage.cpp  multiple.cpp  qpow.cpp  sqrt.cpp  test.cpp
test/example/data/LOJ150/: polynomial_challenge_qres13.out  polynomial_challenge_qres4.out
test/example/data/multiple/: 1.in  11.in  11.out  13.out  16.in  16.out  18.in  19.in  19.out  2.out  6.out  7.in  7.out
test/internal_math/: main.cpp
test/modint/: main.cpp  makefile
test/sqrt/: main.cpp
test/test000/: main.cpp  multiple.cpp  test.py
test/unittest/: CMakeLists.txt  googletest  internal_math.cpp  modint.cpp  multiple.cpp  sqrt.cpp
test/unittest/data/LOJ150/: polynomial_challenge_qres1.in  polynomial_challenge_qres17.in  polynomial_challenge_qres3.out  polynomial_challenge_qres4.in  polynomial_challenge_qres8.out
test/unittest/data/multiple/: 10.in  10.out  13.in  14.out  15.in  17.out  2.in  4.in  4.out  5.in  8.in  8.out
test/vector_resize/: main.cpp
tests/: lagrange.cpp  lagrange_1.in  qpow_1.ans  sqrt_1.in
tests/LOJ150/: 0  0.cpp  1  main  main-combined  makefile
tests/sqrt/: main
(+26 files in other folders)
